--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.23.0",
-    "react-scripts": "5.0.1",
-    "typescript": "^5.4.5",
+    "react-scripts": "^0.0.0",
+    "typescript": "4.9.5",
     "web-vitals": "^3.3.1"
   },
   "devDependencies": {
