--- a/package.json
+++ b/package.json
@@ -19,14 +19,16 @@
     "typescript": "4.9.5",
     "web-vitals": "^3.3.1"
   },
-  "devDependencies": {
-    "eslint": "^8.56.0",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-react": "^7.33.2",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "prettier": "^3.2.5"
+  "overrides": {
+    "@mui/material": "7.3.1",
+    "@mui/icons-material": "7.3.1",
+    "@mui/system": "7.3.1",
+    "@mui/utils": "7.3.1",
+    "@emotion/react": "11.14.0",
+    "@emotion/styled": "11.14.1"
   },
   "scripts": {
+    "prebuild": "npm ls @mui/material && node -e \"console.log('TS', require('typescript').version)\"",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -35,22 +37,10 @@
     "format": "prettier --write ./src"
   },
   "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest",
-      "prettier"
-    ]
+    "extends": ["react-app", "react-app/jest", "prettier"]
   },
   "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
+    "production": [">0.2%", "not dead", "not op_mini all"],
+    "development": ["last 1 chrome version", "last 1 firefox version", "last 1 safari version"]
   }
 }
