--- a/package.json
+++ b/package.json
@@ -5,27 +5,19 @@
   "description": "Projeto React + TypeScript + Material UI para Shihtzu",
   "author": "Seu Nome <seu@email.com>",
   "dependencies": {
-    "@emotion/react": "^11.14.0",
-    "@emotion/styled": "^11.14.1",
-    "@mui/icons-material": "^7.3.1",
-    "@mui/material": "^7.3.1",
-    "@mui/system": "^7.3.1",
-    "@mui/utils": "^7.3.1",
-    "axios": "^1.6.8",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-router-dom": "^6.23.0",
-    "react-scripts": "^5.0.1",
-    "typescript": "4.9.5",
-    "web-vitals": "^3.3.1"
-  },
-  "overrides": {
-    "@mui/material": "7.3.1",
+    "@emotion/react": "11.14.0",
+    "@emotion/styled": "11.14.1",
     "@mui/icons-material": "7.3.1",
+    "@mui/material": "7.3.1",
     "@mui/system": "7.3.1",
     "@mui/utils": "7.3.1",
-    "@emotion/react": "11.14.0",
-    "@emotion/styled": "11.14.1"
+    "axios": "1.6.8",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-router-dom": "6.23.0",
+    "react-scripts": "5.0.1",
+    "typescript": "4.9.5",
+    "web-vitals": "3.3.1"
   },
   "scripts": {
     "prebuild": "npm ls @mui/material && node -e \"console.log('TS', require('typescript').version)\"",
