Corrige album do perfil e integra com FeedCard. Ajusta Grid.

--- a/package.json
+++ b/package.json
@@ -29,10 +29,25 @@
     "format": "prettier --write ./src"
   },
   "eslintConfig": {
-    "extends": ["react-app", "react-app/jest", "prettier"]
+    "extends": [
+      "react-app",
+      "react-app/jest",
+      "prettier"
+    ]
   },
   "browserslist": {
-    "production": [">0.2%", "not dead", "not op_mini all"],
-    "development": ["last 1 chrome version", "last 1 firefox version", "last 1 safari version"]
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
+  },
+  "devDependencies": {
+    "eslint-config-prettier": "^10.1.8"
   }
 }
