Corrige todo backend

--- a/backend/.env
+++ b/backend/.env
@@ -1,1 +1,10 @@
+PORT=5000
 MONGO_URI=mongodb+srv://creatorhub_user:E3dvV9syyF2VSbJD@malta.yfmwgql.mongodb.net/shihtzuz?retryWrites=true&w=majority&appName=Malta
+JWT_SECRET=troque-por-um-segredo-forte
+FRONTEND_URL=https://meu-shihtzu-site2.onrender.com
+S3_BUCKET=shihtizuz-media
+S3_REGION=auto
+S3_ENDPOINT=https://<ACCOUNT_ID>.r2.cloudflarestorage.com
+S3_ACCESS_KEY_ID=<key>
+S3_SECRET_ACCESS_KEY=<secret>
+S3_PUBLIC_BASE_URL=https://pub-xxxxxxxxxxxxxxxxxxxx.r2.dev
