--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "axios": "1.6.8",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-router-dom": "6.23.0",
+    "react-router-dom": "^6.23.0",
     "react-scripts": "5.0.1",
     "typescript": "4.9.5",
     "web-vitals": "3.3.1"
@@ -45,6 +45,7 @@
     ]
   },
   "devDependencies": {
+    "@types/react-dom": "^19.1.7",
     "@vitejs/plugin-react-swc": "^4.0.0",
     "eslint-config-prettier": "^10.1.8",
     "vite": "^7.1.1"
